# Seminaive-Datalog

./: Cargo.toml  README.md  test_closure.sh  test_rsg.sh
amoeba/: Cargo.toml
amoeba/document/: algorithm.typ  amoeba.typ  plot.py
amoeba/src/: main.rs
amoeba/src/engine/: analysis.rs  mod.rs  runtime.rs
amoeba/src/syntax/: ast.rs  context.rs  mod.rs  parser.rs  stratify.rs
bench/: Cargo.toml
bench/src/: main.rs
example/closure/: closure.amo  generate.py
example/rsg/: generate.py  rsg.amo  rsg.db
