[package]
name = "amoeba"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = "0.6.3"
nom = "7.1.3"
csv = "1.2.2"
ordered-float = "3.7.0"
itertools = "0.10.0"
rusqlite = {features = ["backup"], version = "0.29.0"}
colored = "2.0.0"
clap = {features = ["derive"], version = "4.0.32"}

